<resources>
    <string name="app_name">Prophet</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about_me">About Me</string>
    <string name="interests">Interests</string>
    <string name="football_tines_reading_etc">Football, Tines, Reading etc...</string>
    <string name="add_btn_for_interests">add_btn_for_interests</string>
    <string name="edit_about_me">edit_about_me</string>
    <string name="tell_people_about_you">tell people about you!</string>
    <string name="saved">saved</string>
    <string name="added">item added</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="type_message">type message</string>
    <string name="send_message">send message</string>
    <string name="Error">error</string>
    <string name="empty_message">empty message!</string>
    <string name="add_friend">Add Friend</string>
    <string name="chats">Chats</string>
    <string name="add_friends">Add Friends</string>
    <string name="no_details">User didn\'t add details</string>
    <string name="request_sent">request sent</string>
    <string name="error">Error</string>
    <string name="request_icon">request icon</string>
    <string name="friend_requests">friend_requests</string>
    <string name="confirm">Confirm</string>
    <string name="requests">Requests</string>
    <string name="now">Now</string>
    <string name="min_time">%1$d min ago</string>
    <string name="hour_time">%1$d h ago</string>
    <string name="days_time">%1$d days ago</string>
</resources>