<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_image"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/image_margin"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        tools:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_image"
        android:layout_margin="@dimen/ten_dp"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        tools:text="khaled ali" />

    <TextView
        android:id="@+id/About"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_name"
        android:layout_margin="@dimen/ten_dp"
        android:text="@string/about_me"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/darker_gray" />
    <TextView
        android:id="@+id/my_about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/About"
        android:maxLines="3"
        android:ellipsize="end"
        android:layout_margin="@dimen/about_me_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="khaled ali" />
    <ImageButton
        android:id="@+id/my_about_me_btn"
        android:layout_width="@dimen/small_button"
        android:layout_height="@dimen/small_button"
        android:layout_below="@id/my_name"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit_about_me"
        android:src="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/Interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_about_me"
        android:layout_margin="@dimen/ten_dp"
        android:text="@string/interests"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/my_interests_l_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        android:layout_below="@id/Interests"
        android:orientation="horizontal"/>

    <EditText
        android:id="@+id/my_et_interests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_interests_l_layout"
        android:layout_toStartOf="@id/add_interests_btn"
        android:layout_margin="@dimen/ten_dp"
        android:layout_toLeftOf="@id/add_interests_btn"
        android:autofillHints="@string/football_tines_reading_etc"
        android:hint="@string/football_tines_reading_etc"
        android:inputType="text"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/add_interests_btn"
        android:layout_width="@dimen/small_button"
        android:layout_height="@dimen/small_button"
        android:layout_below="@id/my_interests_l_layout"
        android:layout_alignBottom="@id/my_et_interests"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/ten_dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_btn_for_interests"
        android:src="@drawable/ic_baseline_add_circle_outline_24" />

</RelativeLayout>
</ScrollView>