<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image_sheet"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/image_margin"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="5dp"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/user_name_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image_sheet"
            android:layout_margin="@dimen/ten_dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="khaled ali" />

        <Button
            android:id="@+id/add_friend_btn_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name_sheet"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/floating_action_margin"
            android:layout_marginRight="@dimen/floating_action_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_friend"
            android:scaleType="fitXY"
            android:text="@string/add_friend"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/About"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_friend_btn_sheet"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/about_me"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/user_about_me_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/About"
            android:layout_margin="@dimen/about_me_margin"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="khaled ali" />

        <TextView
            android:id="@+id/Interests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_about_me_sheet"
            android:layout_margin="@dimen/ten_dp"
            android:text="@string/interests"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/user_interests_l_layout_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Interests"
            android:orientation="horizontal"
            android:padding="@dimen/ten_dp" />
    </RelativeLayout>
</ScrollView>